k8s/apps/storage/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: storage
  labels:
    app: storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2025-09-07T16-13-09Z
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - containerPort: 9000
              name: minio-api
            - containerPort: 9001
              name: minio-dashboard
          args:
            - server
            - /data
            - --console-address
            - ":9001"
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
