k8s/apps/storage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storage
  labels:
    app: storage
spec:
  selector:
    app: storage
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: minio-api 
    - name: dashboard
      protocol: TCP
      port: 9001
      targetPort: minio-dashboard
