k8s/apps/storage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: storage
  labels:
    app: storage
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`minio.viscord.local`)
      services:
        - name: storage
          port: 9001
